# treesitter-parser-groq

./: .gitattributes  .gitignore  .rules  CLAUDE.md  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  biome.json  build.zig  build.zig.zon  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/: FUNDING.yml
.github/workflows/: ci.yml
bindings/node/: index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_groq/: __init__.py
bindings/rust/: build.rs  lib.rs
bindings/zig/: root.zig  test.zig
examples/: analytics.groq  blog.groq  ecommerce.groq  geo.groq  search.groq
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: comments.txt  complex_queries.txt  expressions.txt  functions.txt  literals.txt  operators.txt  pipes.txt  simple_expressions.txt  traversals.txt
